[package]
name = "cnf-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
configparser = "3.0.2"
glob = "0.3.1"
libc = "0.2.140"

[build-dependencies]
bindgen = "0.65.1"

[profile.release]
lto = true
