[package]
name = "cnf"
version = "0.8.1"
edition = "2021"
rust-version = "1.77.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
glob = "0.3.1"
libc = "0.2.149"
tr = "0.1.7"

[build-dependencies]
cc = "1"
bindgen = "0.72.0"

[profile.release]
lto = true
