[tool.poetry]
name = "cnf-rs"
version = "0.1.0"
description = "command not found handler for openSUSE"
authors = ["Michal Vyskocil <michal.vyskocil@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.group.dev.dependencies]
black = ">=23.3.0"
pytest-container = "^0.1"
pytest-xdist = "^3.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
